# sq_hermes

./: Cargo.toml  README.md  config.json  sample.json  sq_hermes.code-workspace
db/html/: Bevy Engine.html  Ratatui _ Ratatui.html  Rustプログラミング言語.html
db/html/Bevy Engine_files/: c7fa7451-6f95-4815-ac32-b8cc2537837a  site.css
db/html/Ratatui _ Ratatui_files/: hoisted.B6S2I9cf.js.download  index.Cg_FbWb9.css  partytown-sandbox-sw.html
db/url/OpenAI/: 2024年04月22曜日_14時05分56秒.json
db/url/転職/: 2024年04月22曜日_15時15分13秒.json
diagnostic/: diagnostic.drawio
src/: config.rs  google.rs  html.rs  json.rs  macros.rs  main.rs  tui.rs
