[package]
name = "sq_hermes"
version = "0.0.0"
edition = "2021"

[dependencies]
#シリアライズ/デシリアライズ
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" ,futures=["derive"] }
#HTTPクライアント
reqwest = { version = "*", features = ["blocking"] }
scraper = "*"
#非同期処理
tokio = { version = "*", features = ["full"] }
#現在時刻の取得
chrono = "*"
#TUI
ratatui = "*"
crossterm = "*"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
