[package]
name = "sq_hermes"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
#シリアライズ/デシリアライズ
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
sonic-rs = { version = "*" }
#スクレイピング
select = { version = "*" }
reqwest = { version = "*", features = ["cookies", "blocking", "http2", "json"] }
scraper = { version = "*" }
#GUI
ratatui={version = "*"}
crossterm={version = "*"}
#その他
chrono = { version = "*" }
rand = "*"
#形態素解析・自然言語処理・トークン化
lindera = { version = "*", features = ["ipadic", "filter"] }


[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
